// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen switches config import-export] should create the switches: the switches have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ switch => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen switches config import-export] should throw exception when new switches to import miss mandatory properties switches: exception has been thrown 1`] = `
Object {
  "stderr": "Cannot import configuration: some configuration objects' mandatory properties for creation are not set.
	Mandatory properties [physicalSwitch] not set in switch 'Environment/emptyCfgObjectTest'
",
  "stdout": "",
}
`;

exports[`[mutagen switches config import-export] should update the modified switches: the modified switches have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ switch => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen switches config import-export] should update the same switches: the switches have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ switch => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;
